[gd_scene load_steps=84 format=2]

[ext_resource path="res://images/card.png" type="Texture" id=1]
[ext_resource path="res://scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://fonts/SF Atarian System.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/blob.png" type="Texture" id=4]
[ext_resource path="res://explosion/0.png" type="Texture" id=5]
[ext_resource path="res://explosion/1.png" type="Texture" id=6]
[ext_resource path="res://explosion/2.png" type="Texture" id=7]
[ext_resource path="res://explosion/3.png" type="Texture" id=8]
[ext_resource path="res://explosion/4.png" type="Texture" id=9]
[ext_resource path="res://explosion/5.png" type="Texture" id=10]
[ext_resource path="res://explosion/6.png" type="Texture" id=11]
[ext_resource path="res://explosion/7.png" type="Texture" id=12]
[ext_resource path="res://explosion/8.png" type="Texture" id=13]
[ext_resource path="res://explosion/9.png" type="Texture" id=14]
[ext_resource path="res://explosion/10.png" type="Texture" id=15]
[ext_resource path="res://explosion/11.png" type="Texture" id=16]
[ext_resource path="res://explosion/12.png" type="Texture" id=17]
[ext_resource path="res://explosion/13.png" type="Texture" id=18]
[ext_resource path="res://explosion/14.png" type="Texture" id=19]
[ext_resource path="res://explosion/15.png" type="Texture" id=20]
[ext_resource path="res://explosion/16.png" type="Texture" id=21]
[ext_resource path="res://explosion/17.png" type="Texture" id=22]
[ext_resource path="res://explosion/18.png" type="Texture" id=23]
[ext_resource path="res://explosion/19.png" type="Texture" id=24]
[ext_resource path="res://explosion/20.png" type="Texture" id=25]
[ext_resource path="res://explosion/21.png" type="Texture" id=26]
[ext_resource path="res://explosion/22.png" type="Texture" id=27]
[ext_resource path="res://explosion/23.png" type="Texture" id=28]
[ext_resource path="res://explosion/24.png" type="Texture" id=29]
[ext_resource path="res://explosion/25.png" type="Texture" id=30]
[ext_resource path="res://explosion/26.png" type="Texture" id=31]
[ext_resource path="res://explosion/27.png" type="Texture" id=32]
[ext_resource path="res://explosion/28.png" type="Texture" id=33]
[ext_resource path="res://explosion/29.png" type="Texture" id=34]
[ext_resource path="res://explosion/30.png" type="Texture" id=35]
[ext_resource path="res://explosion/31.png" type="Texture" id=36]
[ext_resource path="res://explosion/32.png" type="Texture" id=37]
[ext_resource path="res://explosion/33.png" type="Texture" id=38]
[ext_resource path="res://explosion/34.png" type="Texture" id=39]
[ext_resource path="res://explosion/35.png" type="Texture" id=40]
[ext_resource path="res://explosion/36.png" type="Texture" id=41]
[ext_resource path="res://explosion/37.png" type="Texture" id=42]
[ext_resource path="res://explosion/38.png" type="Texture" id=43]
[ext_resource path="res://explosion/39.png" type="Texture" id=44]
[ext_resource path="res://explosion/40.png" type="Texture" id=45]
[ext_resource path="res://explosion/41.png" type="Texture" id=46]
[ext_resource path="res://explosion/42.png" type="Texture" id=47]
[ext_resource path="res://explosion/43.png" type="Texture" id=48]
[ext_resource path="res://explosion/44.png" type="Texture" id=49]
[ext_resource path="res://explosion/45.png" type="Texture" id=50]
[ext_resource path="res://explosion/46.png" type="Texture" id=51]
[ext_resource path="res://explosion/47.png" type="Texture" id=52]
[ext_resource path="res://explosion/48.png" type="Texture" id=53]
[ext_resource path="res://explosion/49.png" type="Texture" id=54]
[ext_resource path="res://explosion/50.png" type="Texture" id=55]
[ext_resource path="res://explosion/51.png" type="Texture" id=56]
[ext_resource path="res://explosion/52.png" type="Texture" id=57]
[ext_resource path="res://explosion/53.png" type="Texture" id=58]
[ext_resource path="res://explosion/54.png" type="Texture" id=59]
[ext_resource path="res://explosion/55.png" type="Texture" id=60]
[ext_resource path="res://explosion/56.png" type="Texture" id=61]
[ext_resource path="res://explosion/57.png" type="Texture" id=62]
[ext_resource path="res://explosion/58.png" type="Texture" id=63]
[ext_resource path="res://explosion/59.png" type="Texture" id=64]
[ext_resource path="res://explosion/60.png" type="Texture" id=65]
[ext_resource path="res://explosion/61.png" type="Texture" id=66]
[ext_resource path="res://explosion/62.png" type="Texture" id=67]
[ext_resource path="res://explosion/63.png" type="Texture" id=68]
[ext_resource path="res://explosion/64.png" type="Texture" id=69]
[ext_resource path="res://explosion/65.png" type="Texture" id=70]
[ext_resource path="res://explosion/66.png" type="Texture" id=71]
[ext_resource path="res://explosion/67.png" type="Texture" id=72]
[ext_resource path="res://explosion/68.png" type="Texture" id=73]
[ext_resource path="res://explosion/69.png" type="Texture" id=74]
[ext_resource path="res://explosion/70.png" type="Texture" id=75]
[ext_resource path="res://explosion/71.png" type="Texture" id=76]
[ext_resource path="res://explosion/72.png" type="Texture" id=77]
[ext_resource path="res://explosion/73.png" type="Texture" id=78]
[ext_resource path="res://explosion/74.png" type="Texture" id=79]
[ext_resource path="res://explosion/97.png" type="Texture" id=80]

[sub_resource type="DynamicFont" id=1]

size = 64
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 105, 160 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ) ],
"loop": false,
"name": "default",
"speed": 60.0
} ]

[node name="Card" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TopLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -90.0
margin_top = -140.0
margin_bottom = -75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BottomLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 90.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "A"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Symbol" type="Sprite" parent="."]

[node name="Blob" type="Sprite" parent="."]
position = Vector2( 70, -110 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Explosion" type="AnimatedSprite" parent="."]
position = Vector2( 0, -97 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "default"

[connection signal="input_event" from="Area2D" to="." method="on_input_event"]
[connection signal="tween_completed" from="Tween" to="." method="on_tween_completed"]
[connection signal="animation_finished" from="Explosion" to="." method="on_explosion_finished"]
